--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 
       function loadKML() {
         // Your same Drive-hosted KML file
-        const kmlUrl = "https://drive.google.com/uc?export=download&id=17uU8PbDkT_S0sYOHvdY3EHxWP9l-YLGK";
+        const kmlUrl = "const kmlUrl = "https://raw.githubusercontent.com/vidarr-ventures/candy-map/main/CandyMap.kml";
+";
 
         fetch(kmlUrl)
           .then((res) => res.text())
