Fix duplicate declaration of kmlUrl variable

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
       function loadKML() {
         // Your same Drive-hosted KML file
-        const kmlUrl = "const kmlUrl = "https://raw.githubusercontent.com/vidarr-ventures/candy-map/main/CandyMap.kml";
-";
+        const kmlUrl = "https://raw.githubusercontent.com/vidarr-ventures/candy-map/main/CandyMap.kml";
+
 
         fetch(kmlUrl)
           .then((res) => res.text())
