Add legend for candy color mapping
Added a legend box to display candy color mappings based on counts.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,37 @@
         left: 0;
       }
       .gm-style-iw p { margin: 0; }
+
+      /* Legend box */
+      #legend {
+        background: rgba(255, 255, 255, 0.95);
+        padding: 10px 14px;
+        border-radius: 8px;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+        z-index: 20;
+      }
+      #legend h3 {
+        margin: 0 0 6px 0;
+        font-size: 14px;
+        color: #333;
+      }
+      .legend-item {
+        display: flex;
+        align-items: center;
+        margin-bottom: 4px;
+      }
+      .legend-color {
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+        margin-right: 8px;
+        border: 1px solid #333;
+      }
     </style>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkVmW-fM7yR9iVgoEZU8Kyhw54LeioIi0"></script>
@@ -74,21 +105,19 @@
               if (!coordsText) continue;
 
               const [lng, lat] = coordsText.trim().split(",").map(Number);
-
-              // Extract candy count (e.g. "1500 pieces")
               const candyMatch = name.match(/(\d{2,5})\s*pieces/i);
               const candyCount = candyMatch ? parseInt(candyMatch[1]) : 0;
 
-              // Define color by exact number
+              // Exact color mapping
               let color;
               switch (candyCount) {
-                case 200: color = "#2ecc71"; break;    // green
-                case 500: color = "#3498db"; break;    // blue
-                case 750: color = "#f39c12"; break;    // orange
-                case 1000: color = "#9b59b6"; break;   // purple
-                case 1500: color = "#e74c3c"; break;   // red
-                case 2000: color = "#c0392b"; break;   // dark red
-                default: color = "#95a5a6";            // gray fallback
+                case 200: color = "#2ecc71"; break;   // green
+                case 500: color = "#3498db"; break;   // blue
+                case 750: color = "#f39c12"; break;   // orange
+                case 1000: color = "#9b59b6"; break;  // purple
+                case 1500: color = "#e74c3c"; break;  // red
+                case 2000: color = "#c0392b"; break;  // dark red
+                default: color = "#95a5a6";           // gray
               }
 
               const marker = new google.maps.Marker({
@@ -109,9 +138,7 @@
                 content: `<strong>${name}</strong>`,
               });
 
-              marker.addListener("click", () => {
-                infoWindow.open(map, marker);
-              });
+              marker.addListener("click", () => infoWindow.open(map, marker));
             }
           })
           .catch((err) => {
@@ -135,5 +162,17 @@
       <button id="refresh-btn" onclick="refreshMap()">Refresh Map</button>
     </div>
     <div id="map"></div>
+
+    <!-- Legend -->
+    <div id="legend">
+      <h3>Candy Colors</h3>
+      <div class="legend-item"><div class="legend-color" style="background:#2ecc71;"></div>200 pieces</div>
+      <div class="legend-item"><div class="legend-color" style="background:#3498db;"></div>500 pieces</div>
+      <div class="legend-item"><div class="legend-color" style="background:#f39c12;"></div>750 pieces</div>
+      <div class="legend-item"><div class="legend-color" style="background:#9b59b6;"></div>1000 pieces</div>
+      <div class="legend-item"><div class="legend-color" style="background:#e74c3c;"></div>1500 pieces</div>
+      <div class="legend-item"><div class="legend-color" style="background:#c0392b;"></div>2000 pieces</div>
+      <div class="legend-item"><div class="legend-color" style="background:#95a5a6;"></div>Other</div>
+    </div>
   </body>
 </html>
