Refactor map initialization and remove script tag
Removed the Google Maps API script tag and added an async function to initialize the map.

--- a/candy-map.html
+++ b/candy-map.html
@@ -24,7 +24,7 @@
 <p class="p1"><span class="Apple-converted-space">      </span>#map { height: 100%; width: 100%; }</p>
 <p class="p1"><span class="Apple-converted-space">      </span>.gm-style-iw p { margin: 0; }</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/style&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;script src="https://maps.googleapis.com/maps/api/js?key=<span class="s1"><b>AIzaSyCkVmW-fM7yR9iVgoEZU8Kyhw54LeioIi0</b></span>"&gt;&lt;/script&gt;</p>
+<p class="p1"><span class="Apple-converted-space">  
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;script&gt;</p>
 <p class="p1"><span class="Apple-converted-space">      </span>async function initMap() {</p>
 <p class="p1"><span class="Apple-converted-space">        </span>// Center on Carlisle, MA</p>
