Update Google Maps API key in index.html
Replaced Google Maps API key with placeholder.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       }
     </style>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkVmW-fM7yR9iVgoEZU8Kyhw54LeioIi0"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_GOES_HERE"></script>
 
     <script>
       let map;
