--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       }
     </style>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_GOES_HERE"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo55WIobOFczEhfRbrzI5jCGXLA0A9yWk"></script>
 
     <script>
       let map;
